--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="main">
         <nav>
             <div class="logo">
-                <img src="C:\Users\HP\Desktop\images\logo1.jpg">
+                <img src="logo1.jpg">
             </div>
             <div class="nav-link">
                 <ul>
@@ -31,11 +31,11 @@
     </div>
     <div class="information">
         <div class="overlay"></div>
-        <img src="C:\Users\HP\Desktop\images\mobile2.jpg" class="mobile">
+        <img src="mobile2.jpg" class="mobile">
 
         <div id="circle">
             <div class="feature one">
-                <img src="C:\Users\HP\Desktop\images\camera.jpg">
+                <img src="camera.jpg">
 
                 <div>
                     <h1> camera</h1>
@@ -43,7 +43,7 @@
                 </div>
             </div>
             <div class="feature two">
-                <img src="C:\Users\HP\Desktop\images\processor1.jpg">
+                <img src="processor1.jpg">
                 <div>
                     <h1> processor</h1>
                     <p>snapdragon 720G&alexa hands-free</octa-core>
@@ -51,14 +51,14 @@
                 </div>
             </div>
             <div class="feature three">
-                <img src="C:\Users\HP\Desktop\images\display.jpg">
+                <img src="display.jpg">
                 <div>
                     <h1>display</h1>
                     <p>16.9cm(6.67)FHD+dot display</p>
                 </div>
             </div>
             <div class="feature fourth">
-                <img src="C:\Users\HP\Desktop\images\battery.jpg">
+                <img src="battery.jpg">
                 <div>
                     <h1> battery</h1>
                     <p>5020mAh battery</p>
@@ -68,9 +68,9 @@
         </div>
     </div>
     <div class="controls">
-        <img src="C:\Users\HP\Desktop\images\uparrow.jpg" id="upbtn">
+        <img src="uparrow.jpg" id="upbtn">
         <h3>features</h3>
-        <img src="C:\Users\HP\Desktop\images\downarrow.jpg" id="downbtn">
+        <img src="downarrow.jpg" id="downbtn">
     </div>
     <script>
         var circle = document.getElementById("circle");
